# RayGenProjet

./: CMakeLists.txt  RayGenProjet.cpp  RayGenProjet.h
Image/: Image.cpp  Image.h  ImgType.h
Libs/: json.hpp
Scene/: Template.json
Tools/: Camera.cpp  Camera.h  Color.cpp  Color.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Object.cpp  Object.h  Point.cpp  Point.h  Rayon.cpp  Rayon.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Serializer.h  StringRW.h  Vector.cpp  Vector.h
Tools/Objects/: Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Include.h  Plan.cpp  Plan.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h
